# ReticulumNewsnet

./: .gitignore  CLAUDE.md  README.md  build.py  config.example.toml  newsnet.spec  newsnet_main.py  pyproject.toml  simulate.py
.github/workflows/: release.yml
api/: app.py  auth.py  websocket.py
api/routes/: articles.py  config_route.py  filters.py  groups.py  identity.py  peers.py  sync_route.py  websocket_route.py
cli/: main.py
docs/: design-decisions.md
docs/plans/: 2026-03-03-reticulum-newsnet-design.md  2026-03-03-reticulum-newsnet-implementation.md  2026-03-06-tcp-peer-management-design.md  2026-03-06-tcp-peer-management.md  2026-03-10-tcp-peer-retry-design.md  2026-03-10-tcp-peer-retry.md
frontend/: build.sh  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.svelte  (+1 more)
newsnet/: __init__.py  _wordlist.py  article.py  config.py  filters.py  identity.py  identity_words.py  node.py  peers.py  store.py  sync.py  wizard.py
pyinstaller_hooks/: hook-RNS.Interfaces.py  hook-RNS.py  rthook_rns.py
tests/: test_api.py  test_api_websocket.py  test_article.py  test_cli.py  test_config.py  test_filters.py  test_identity.py  test_newsnet_main_env.py  test_node.py  test_peers.py  test_pull_guarantee.py  test_setup_wizard.py  test_simulate_article_gen.py  test_simulate_metrics.py  test_simulate_models.py  test_simulate_node_process.py  test_simulate_simulation.py  test_simulate_topology.py  test_store.py  test_sync.py  test_sync_engine.py  test_sync_session.py  test_tui.py
tui/: app.py  app.tcss
(+26 files in other folders)
