[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reticulum-newsnet"
version = "0.1.7"
description = "Usenet-inspired P2P threaded discussions on the Reticulum Network"
requires-python = ">=3.11"
dependencies = [
    "rns>=0.7.0",
    "umsgpack>=0.1.0",
    "textual>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
include = ["newsnet*", "cli*", "tui*"]

[tool.setuptools.package-data]
tui = ["*.tcss"]

[project.scripts]
newsnet = "cli.main:main"
